<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/playerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="#33B5E5"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/playerName"
            android:layout_marginTop="16dp"
            android:background="#D3D3D3"
            android:padding="10dp" >

            <TextView
                android:id="@+id/pname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="8dp"
                android:text="@string/innings"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/innings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/pname"
                android:layout_toRightOf="@id/pname"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/innings"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/notouts"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/notouts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/innings"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@+id/pphone"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/notouts"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/runs"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/runs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/notouts"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/pplace"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pspeciality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/runs"
                android:layout_marginTop="16dp"
                android:text="@string/highest_score"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/highestScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/runs"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/pspeciality"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/highestScore"
                android:layout_marginTop="16dp"
                android:text="@string/balls_taken"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ballsTaken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/highestScore"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/pspeciality"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ballsTaken"
                android:layout_marginTop="16dp"
                android:text="@string/fours"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/ballsTaken"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/pspeciality"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fours"
                android:layout_marginTop="16dp"
                android:text="@string/sixes"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sixes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/fours"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/pspeciality"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/odi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/testButton"
            android:layout_alignBottom="@+id/testButton"
            android:layout_centerHorizontal="true"
            android:background="@drawable/layout_border"
            android:padding="16dp"
            android:text="@string/odi"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/t20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/odi"
            android:layout_alignBottom="@+id/odi"
            android:layout_alignParentRight="true"
            android:background="@drawable/layout_border"
            android:padding="16dp"
            android:text="@string/t20"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="@+id/relativeLayout1"
            android:layout_below="@+id/relativeLayout1"
            android:layout_marginTop="18dp"
            android:background="@drawable/layout_border"
            android:padding="16dp"
            android:text="@string/test"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/odi"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:background="@drawable/layout_border"
            android:padding="16dp"
            android:text="@string/send_score_to_friend"
            android:textColor="#ffffff" />
    </RelativeLayout>

</ScrollView>