<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/playerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="#33B5E5"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/playerName"
            android:layout_marginTop="16dp"
            android:background="#D3D3D3"
            android:padding="10dp" >

            <TextView
                android:id="@+id/pname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="8dp"
                android:text="@string/team"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/pname"
                android:layout_toRightOf="@id/pname"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/team"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/role"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/team"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@+id/pphone"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/role"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/bat_style"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/batStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/role"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/pplace"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pspeciality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/batStyle"
                android:layout_marginTop="16dp"
                android:text="@string/bowl_style"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bowlStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/batStyle"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/pspeciality"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/relativeLayout1"
            android:layout_below="@+id/relativeLayout1"
            android:layout_marginTop="26dp"
            android:background="@drawable/layout_border"
            android:padding="16dp"
            android:text="@string/test"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/odi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/testButton"
            android:layout_alignBottom="@+id/testButton"
            android:layout_centerHorizontal="true"
            android:background="@drawable/layout_border"
            android:padding="16dp"
            android:text="@string/odi"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/t20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/odi"
            android:layout_alignBottom="@+id/odi"
            android:layout_alignParentRight="true"
            android:background="@drawable/layout_border"
            android:padding="16dp"
            android:text="@string/t20"
            android:textColor="#ffffff" />
    </RelativeLayout>

</ScrollView>